RecPy/src/lexrParsr/RecPyParser.java
// Generated from .\lexrParsr\RecPyParser.g4 by ANTLR 4.9.1

	// import javax.swing.JOptionPane;
	package lexrParsr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RecPyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		START_WHILE_BLK=1, END_WHILE_BLK=2, LINE_ESCAPE=3, DEF_BLK=4, DEF_EXPR=5, 
		DEF=6, IF_=7, WHILE_=8, IF_EXPR=9, WHILE_EXPR=10, ELSE_=11, RETURN_EXPR=12, 
		RETURN_NTR=13, RETURN_TR=14, INTERM=15, ATTRIBUTION=16, COMMENT=17, PRINT=18, 
		PARAMETERS=19, SIMPL_BLK=20, EMPTY_LINE=21, PARAMET_COND=22, COND=23, 
		DEF_NAME=24, FINAL_COLON=25, ARGS=26;
	public static final int
		RULE_start = 0, RULE_defTailRecursive = 1, RULE_defNonTailRecursive = 2, 
		RULE_defIterative = 3, RULE_def_blk = 4, RULE_start_while_blk = 5, RULE_end_while_blk = 6, 
		RULE_if_expr = 7, RULE_else_ = 8, RULE_return_expr = 9, RULE_return_tr = 10, 
		RULE_return_ntr = 11, RULE_print = 12, RULE_comment = 13, RULE_attribution = 14, 
		RULE_simpl_blk = 15, RULE_empty_line = 16, RULE_interm = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "defTailRecursive", "defNonTailRecursive", "defIterative", "def_blk", 
			"start_while_blk", "end_while_blk", "if_expr", "else_", "return_expr", 
			"return_tr", "return_ntr", "print", "comment", "attribution", "simpl_blk", 
			"empty_line", "interm"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "START_WHILE_BLK", "END_WHILE_BLK", "LINE_ESCAPE", "DEF_BLK", "DEF_EXPR", 
			"DEF", "IF_", "WHILE_", "IF_EXPR", "WHILE_EXPR", "ELSE_", "RETURN_EXPR", 
			"RETURN_NTR", "RETURN_TR", "INTERM", "ATTRIBUTION", "COMMENT", "PRINT", 
			"PARAMETERS", "SIMPL_BLK", "EMPTY_LINE", "PARAMET_COND", "COND", "DEF_NAME", 
			"FINAL_COLON", "ARGS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RecPyParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



		//public boolean isDef_LT(){
		//JOptionPane.showMessageDialog(null,"Debug: entrou na linha 17");
		//	return (_input.LT(1).getText().toUpperCase().equals("DEF")); 
		//}
		
		public enum TipoTrad {
			TAIL_RECURSIVE,
			NON_TAIL_RECURSIVE,
			ITERATIVE
		}
		// Antes de realizar testes na linha de comando (CMD), configurar a linha abaixo conforme o tipo de algoritmo a testar:
		// Fazer isso tanto no LEXER quanto no PARSER
		private TipoTrad tipoTraduc=TipoTrad.NON_TAIL_RECURSIVE;
		
		public void setTipoTraduc(TipoTrad tipoTrd_){
			tipoTraduc=tipoTrd_;
		}
		public boolean isTailRecursive(){
			return tipoTraduc==TipoTrad.TAIL_RECURSIVE;
		}
		public boolean isNonTailRecursive(){
			return tipoTraduc==TipoTrad.NON_TAIL_RECURSIVE;
		}
		public boolean isIterative(){
			return tipoTraduc==TipoTrad.ITERATIVE;
		}

	public RecPyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(RecPyParser.EOF, 0); }
		public DefTailRecursiveContext defTailRecursive() {
			return getRuleContext(DefTailRecursiveContext.class,0);
		}
		public DefNonTailRecursiveContext defNonTailRecursive() {
			return getRuleContext(DefNonTailRecursiveContext.class,0);
		}
		public DefIterativeContext defIterative() {
			return getRuleContext(DefIterativeContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecPyParserVisitor ) return ((RecPyParserVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				{
				setState(36);
				defTailRecursive();
				}
				}
				break;
			case 2:
				{
				{
				setState(37);
				defNonTailRecursive();
				}
				}
				break;
			case 3:
				{
				{
				setState(38);
				defIterative();
				}
				}
				break;
			}
			setState(41);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefTailRecursiveContext extends ParserRuleContext {
		public Def_blkContext def_blk() {
			return getRuleContext(Def_blkContext.class,0);
		}
		public List<Empty_lineContext> empty_line() {
			return getRuleContexts(Empty_lineContext.class);
		}
		public Empty_lineContext empty_line(int i) {
			return getRuleContext(Empty_lineContext.class,i);
		}
		public Return_exprContext return_expr() {
			return getRuleContext(Return_exprContext.class,0);
		}
		public Return_trContext return_tr() {
			return getRuleContext(Return_trContext.class,0);
		}
		public List<Else_Context> else_() {
			return getRuleContexts(Else_Context.class);
		}
		public Else_Context else_(int i) {
			return getRuleContext(Else_Context.class,i);
		}
		public List<IntermContext> interm() {
			return getRuleContexts(IntermContext.class);
		}
		public IntermContext interm(int i) {
			return getRuleContext(IntermContext.class,i);
		}
		public If_exprContext if_expr() {
			return getRuleContext(If_exprContext.class,0);
		}
		public DefTailRecursiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defTailRecursive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).enterDefTailRecursive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).exitDefTailRecursive(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecPyParserVisitor ) return ((RecPyParserVisitor<? extends T>)visitor).visitDefTailRecursive(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefTailRecursiveContext defTailRecursive() throws RecognitionException {
		DefTailRecursiveContext _localctx = new DefTailRecursiveContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_defTailRecursive);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(43);
			if (!(isTailRecursive())) throw new FailedPredicateException(this, "isTailRecursive()");
			{
			setState(44);
			def_blk();
			}
			{
			{
			{
			setState(45);
			if_expr();
			}
			setState(49);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(46);
					interm();
					}
					} 
				}
				setState(51);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
			{
			setState(52);
			return_expr();
			}
			}
			{
			setState(57);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(54);
					else_();
					}
					} 
				}
				setState(59);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(63);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(60);
					interm();
					}
					} 
				}
				setState(65);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
			{
			{
			setState(66);
			return_tr();
			}
			setState(70);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(67);
					interm();
					}
					} 
				}
				setState(72);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EMPTY_LINE) {
				{
				{
				setState(73);
				empty_line();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefNonTailRecursiveContext extends ParserRuleContext {
		public Def_blkContext def_blk() {
			return getRuleContext(Def_blkContext.class,0);
		}
		public List<Empty_lineContext> empty_line() {
			return getRuleContexts(Empty_lineContext.class);
		}
		public Empty_lineContext empty_line(int i) {
			return getRuleContext(Empty_lineContext.class,i);
		}
		public Return_exprContext return_expr() {
			return getRuleContext(Return_exprContext.class,0);
		}
		public Return_ntrContext return_ntr() {
			return getRuleContext(Return_ntrContext.class,0);
		}
		public List<Else_Context> else_() {
			return getRuleContexts(Else_Context.class);
		}
		public Else_Context else_(int i) {
			return getRuleContext(Else_Context.class,i);
		}
		public List<IntermContext> interm() {
			return getRuleContexts(IntermContext.class);
		}
		public IntermContext interm(int i) {
			return getRuleContext(IntermContext.class,i);
		}
		public If_exprContext if_expr() {
			return getRuleContext(If_exprContext.class,0);
		}
		public DefNonTailRecursiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defNonTailRecursive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).enterDefNonTailRecursive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).exitDefNonTailRecursive(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecPyParserVisitor ) return ((RecPyParserVisitor<? extends T>)visitor).visitDefNonTailRecursive(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefNonTailRecursiveContext defNonTailRecursive() throws RecognitionException {
		DefNonTailRecursiveContext _localctx = new DefNonTailRecursiveContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_defNonTailRecursive);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(79);
			if (!(isNonTailRecursive())) throw new FailedPredicateException(this, "isNonTailRecursive()");
			{
			setState(80);
			def_blk();
			}
			{
			{
			{
			setState(81);
			if_expr();
			}
			setState(85);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(82);
					interm();
					}
					} 
				}
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
			{
			setState(88);
			return_expr();
			}
			}
			{
			setState(93);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(90);
					else_();
					}
					} 
				}
				setState(95);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(96);
					interm();
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
			{
			{
			setState(102);
			return_ntr();
			}
			setState(106);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(103);
					interm();
					}
					} 
				}
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EMPTY_LINE) {
				{
				{
				setState(109);
				empty_line();
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefIterativeContext extends ParserRuleContext {
		public Def_blkContext def_blk() {
			return getRuleContext(Def_blkContext.class,0);
		}
		public Start_while_blkContext start_while_blk() {
			return getRuleContext(Start_while_blkContext.class,0);
		}
		public End_while_blkContext end_while_blk() {
			return getRuleContext(End_while_blkContext.class,0);
		}
		public List<Empty_lineContext> empty_line() {
			return getRuleContexts(Empty_lineContext.class);
		}
		public Empty_lineContext empty_line(int i) {
			return getRuleContext(Empty_lineContext.class,i);
		}
		public DefIterativeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defIterative; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).enterDefIterative(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).exitDefIterative(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecPyParserVisitor ) return ((RecPyParserVisitor<? extends T>)visitor).visitDefIterative(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefIterativeContext defIterative() throws RecognitionException {
		DefIterativeContext _localctx = new DefIterativeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_defIterative);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(115);
			if (!(isIterative())) throw new FailedPredicateException(this, "isIterative()");
			{
			setState(116);
			def_blk();
			}
			{
			setState(117);
			start_while_blk();
			}
			{
			setState(118);
			end_while_blk();
			}
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EMPTY_LINE) {
				{
				{
				setState(119);
				empty_line();
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Def_blkContext extends ParserRuleContext {
		public TerminalNode DEF_BLK() { return getToken(RecPyParser.DEF_BLK, 0); }
		public List<IntermContext> interm() {
			return getRuleContexts(IntermContext.class);
		}
		public IntermContext interm(int i) {
			return getRuleContext(IntermContext.class,i);
		}
		public Def_blkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def_blk; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).enterDef_blk(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).exitDef_blk(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecPyParserVisitor ) return ((RecPyParserVisitor<? extends T>)visitor).visitDef_blk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Def_blkContext def_blk() throws RecognitionException {
		Def_blkContext _localctx = new Def_blkContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_def_blk);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(125);
			match(DEF_BLK);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INTERM) {
				{
				{
				setState(126);
				interm();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Start_while_blkContext extends ParserRuleContext {
		public TerminalNode START_WHILE_BLK() { return getToken(RecPyParser.START_WHILE_BLK, 0); }
		public List<IntermContext> interm() {
			return getRuleContexts(IntermContext.class);
		}
		public IntermContext interm(int i) {
			return getRuleContext(IntermContext.class,i);
		}
		public Start_while_blkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start_while_blk; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).enterStart_while_blk(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).exitStart_while_blk(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecPyParserVisitor ) return ((RecPyParserVisitor<? extends T>)visitor).visitStart_while_blk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Start_while_blkContext start_while_blk() throws RecognitionException {
		Start_while_blkContext _localctx = new Start_while_blkContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_start_while_blk);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(132);
			match(START_WHILE_BLK);
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INTERM) {
				{
				{
				setState(133);
				interm();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class End_while_blkContext extends ParserRuleContext {
		public TerminalNode END_WHILE_BLK() { return getToken(RecPyParser.END_WHILE_BLK, 0); }
		public List<IntermContext> interm() {
			return getRuleContexts(IntermContext.class);
		}
		public IntermContext interm(int i) {
			return getRuleContext(IntermContext.class,i);
		}
		public End_while_blkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_end_while_blk; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).enterEnd_while_blk(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).exitEnd_while_blk(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecPyParserVisitor ) return ((RecPyParserVisitor<? extends T>)visitor).visitEnd_while_blk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final End_while_blkContext end_while_blk() throws RecognitionException {
		End_while_blkContext _localctx = new End_while_blkContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_end_while_blk);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(139);
			match(END_WHILE_BLK);
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INTERM) {
				{
				{
				setState(140);
				interm();
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_exprContext extends ParserRuleContext {
		public TerminalNode IF_EXPR() { return getToken(RecPyParser.IF_EXPR, 0); }
		public If_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).enterIf_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).exitIf_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecPyParserVisitor ) return ((RecPyParserVisitor<? extends T>)visitor).visitIf_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_exprContext if_expr() throws RecognitionException {
		If_exprContext _localctx = new If_exprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_if_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(IF_EXPR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Else_Context extends ParserRuleContext {
		public TerminalNode ELSE_() { return getToken(RecPyParser.ELSE_, 0); }
		public Else_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).enterElse_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).exitElse_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecPyParserVisitor ) return ((RecPyParserVisitor<? extends T>)visitor).visitElse_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Else_Context else_() throws RecognitionException {
		Else_Context _localctx = new Else_Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_else_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(ELSE_);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Return_exprContext extends ParserRuleContext {
		public TerminalNode RETURN_EXPR() { return getToken(RecPyParser.RETURN_EXPR, 0); }
		public Return_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).enterReturn_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).exitReturn_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecPyParserVisitor ) return ((RecPyParserVisitor<? extends T>)visitor).visitReturn_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Return_exprContext return_expr() throws RecognitionException {
		Return_exprContext _localctx = new Return_exprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_return_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(RETURN_EXPR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Return_trContext extends ParserRuleContext {
		public TerminalNode RETURN_TR() { return getToken(RecPyParser.RETURN_TR, 0); }
		public Return_trContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_tr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).enterReturn_tr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RecPyParserListener ) ((RecPyParserListener)listener).exitReturn_tr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RecPyParserVisitor ) return ((RecPyParserVisitor<? extends T>)visitor).visitReturn_tr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Return_trContext return_tr() throws RecognitionException {
		Return_trContext _localctx = new Return_trContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_return_tr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(152);
			if (!(isTailRecursive())) throw new FailedPredicateException(this, "isTailRecursive()");
			setState(153);
			match(RETURN_TR);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
